# CQF-deNoise

./: .gitignore  CMakeLists.txt  LICENSE  README.md
base/: CMakeLists.txt  global.h
core/: CMakeLists.txt  CQF_mt.h  gqf.c  gqf.h
scripts/: trueKmer2falsKmer.py
src/: CMakeLists.txt  CQF-deNoise.cpp  cqf_operations.cpp
